# lupa-encoding-issue

./: README.md  pyproject.toml
lupa_test_encoding/: main.py
