[tool.poetry]
name = "lupa_test_encoding"
version = "0.1.0"
description = ""
authors = ["Stephan Weinwurm <stephan.weinwurm@reddit.com>"]

[tool.poetry.dependencies]
python = "^3.10"
lupa = "^1.13"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
